--- a/views/index.jade
+++ b/views/index.jade
@@ -20,6 +20,8 @@ html
         script(src='/floatthead/jquery.floatThead.min.js')
         script(src='/toastr/toastr.min.js')
         script(src='/js/jQuery_sortColumn.min.js')
+        // for debugging
+        //-script(src='/js/jQuery_sortColumn.js')
         script(src='/js/jquery-ui.min.js')
         script(src='/jquery-contextmenu/jquery.contextMenu.min.js')
         script(src='/js/jquery-multiselect.js')
@@ -117,6 +119,10 @@ html
                                 label(title='Disabling pulse animations may improve performace')
                                     input#use-pulse(type='checkbox')
                                     | Use pulse animation
+                            .checkbox
+                                label(title='Show or hide "unknown" text in the browser')
+                                    input#use-unknown(type='checkbox')
+                                    | Use 'unknown' text in the browser (if false, it will show nothing)
                             .checkbox
                                 label(title='Note: some errors you may see are false-positives.')
                                     input#show-all-errors(type='checkbox')
