--- a/public/css/overwrite.less
+++ b/public/css/overwrite.less
@@ -298,7 +298,7 @@ table.floatThead-table {
         margin-top: 16px;
         height: 500px;
     }
-    // accessability for scrolling
+    // accessibility for scrolling
     #pslwrap, #slwrap {
         border-left: 1px solid #DDD;
         border-right: 1px solid #DDD;
