Add mpd's consume setting to client
Remove komponist.once('ready', updateAll) because it was no longer
reliable (opening the browser for the first time would not call the
function, only after refreshing)
Rename updateAll to initAfterConnection because we never use it to
"update everything".
Add function to set the current song so there is less parseInt's
everywhere else (so we will now assume that Pos and Id are ints,
this might break things)
Add a message for users that have Javascript disabled

--- a/views/index.jade
+++ b/views/index.jade
@@ -134,6 +134,10 @@ html
                             h3 Server Settings
                             label Track crossfade (0 - 10 seconds)
                             input#crossfade(type='range', min='0', max='10')
+                            .checkbox
+                                label(title='Removes songs when skipping and when the song finishes')
+                                    input#consume(type='checkbox')
+                                    | Use consume mode
                     .modal-footer
                         button.btn.btn-default(type='button', data-dismiss='modal') Close
 
@@ -275,6 +279,7 @@ html
 
         main
             #browser.col-sm-8
+                noscript: h1 You have Javascript disabled. This does not work without Javascript.
                 // having the block wrapper fixes an issue with webkit not getting the childs height
                 #browser-header-wrap
                     #browser-header
