--- a/views/index.jade
+++ b/views/index.jade
@@ -100,6 +100,8 @@ html
                             select#themes.form-control
                                 option(value='default') Default
                                 option(value='default-thin') Default (Thin)
+                                option(value='materialish') Materialish
+                                option(value='materialish-thin') Materialish (Thin)
                             .checkbox
                                 label(title='Note: This client will be slow with playlists larger than 2000 songs if pagination is disabled.')
                                     input#use-pages-playlist(type='checkbox')
