Add basic hot keys to playlist modals
Add uppercase to materialish buttons
Add clear button to save playlist
Remove unwanted css that I forgot to ignore in the last commit

--- a/views/index.jade
+++ b/views/index.jade
@@ -173,7 +173,11 @@ html
                             span ×
                         h4.modal-title Save playlist
                     .modal-body
-                        input#playlist-save-input.form-control(type='text', placeholder='Enter new playlist name')
+                        .input-group
+                            input#playlist-save-input.form-control(type='text', placeholder='Enter new playlist name')
+                            span.input-group-btn
+                                button#playlist-save-clear.btn.btn-default(type='button')
+                                    span.glyphicon.glyphicon-remove
                         br
                         +playlists
                     .modal-footer
