Fix some issues.
Materialish: Add proper font weight to dropdowns
Add disable event trigger to saveFromStored

--- a/public/css/themes/materialish/vars.less
+++ b/public/css/themes/materialish/vars.less
@@ -139,6 +139,10 @@ label {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
+.dropdown-menu > li > a {
+    font-weight: 300;
+}
+
 // panel
 .panel {
     border: 0;
