Init library browser
Add nav thin variable to themes

--- a/public/css/themes/default/vars.less
+++ b/public/css/themes/default/vars.less
@@ -13,6 +13,8 @@
 @import "@{package}/input-groups.less";
 @import "@{package}/panels.less";
 @import "@{package}/navbar.less";
+@import "@{package}/dropdowns.less";
+@import "@{package}/navs.less";
 
 // btn
 .btn {
