--- a/public/css/themes/materialish/vars.less
+++ b/public/css/themes/materialish/vars.less
@@ -75,6 +75,7 @@
 @import "@{package}/panels.less";
 @import "@{package}/navbar.less";
 @import "@{package}/dropdowns.less";
+@import "@{package}/navs.less";
 
 body {
     font-weight: 300;
