--- a/public/css/themes/thin-vars.less
+++ b/public/css/themes/thin-vars.less
@@ -10,3 +10,4 @@
 @input-height-base: 34 - 6 + @padding-base-vertical - 4px;
 @panel-heading-padding: 0;
 @navbar-height: 35px;
+@nav-link-padding: @padding-base-vertical @padding-base-horizontal;
