--- a/public/css/overwrite.less
+++ b/public/css/overwrite.less
@@ -78,6 +78,38 @@ main {
             overflow-x: hidden; // in case of size issues with js
         }
     }
+    #library {
+        display: flex;
+        flex-direction: column;
+
+        #library-top {
+            display: flex;
+            flex: 1;
+            overflow: auto;
+
+            #library-artists-wrap, library-albums-wrap {
+                overflow: auto;
+            }
+
+            #library-artists, #library-albums {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                overflow: auto;
+            }
+        }
+
+        #library-songs {
+            flex: 1;
+            overflow: auto;
+            display: flex;
+            flex-direction: column;
+
+            #library-songs-wrap {
+                overflow: auto;
+            }
+        }
+    }
     #playlist {
         -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
         display: flex;
@@ -169,6 +201,9 @@ main {
         min-height: 20px;
     }
 }
+#browser-selection {
+    flex: 0;
+}
 .pages {
     margin-bottom: 0;
     display: flex;
@@ -202,7 +237,7 @@ table.floatThead-table {
     -webkit-box-flex: 1; /* fallback for apple webkit */
     flex: 1;
 }
-#song-list, #playlist-song-list, #home, .loc-dir, .playlists, .faded {
+#song-list, #playlist-song-list, #home, .loc-dir, .playlists, .faded, #library-artists-list, #library-albums-list, #library-songs-list {
     cursor: pointer;
 }
 .faded {
