Slightly better generic song-list tables
Add active class to button selection for library vs file browser
Add table sorting function (finally)
Add theadfloat function (finally)

--- a/public/css/overwrite.less
+++ b/public/css/overwrite.less
@@ -237,7 +237,7 @@ table.floatThead-table {
     -webkit-box-flex: 1; /* fallback for apple webkit */
     flex: 1;
 }
-#song-list, #playlist-song-list, #home, .loc-dir, .playlists, .faded, #library-artists-list, #library-albums-list, #library-songs-list {
+.song-list, #playlist-song-list, #home, .loc-dir, .playlists, .faded, #library-artists-list, #library-albums-list {
     cursor: pointer;
 }
 .faded {
@@ -285,7 +285,7 @@ table.floatThead-table {
     z-index: 1003 !important; // above pb and floathead
 }
 // disables sorting for dragged item
-#song-list .no-placeholder {
+.song-list .no-placeholder {
     display: none;
 }
 // enables sorting for dragged item
