Add consume mode warning icon
LIVE lan party updates... Gonna play some games...

--- a/public/css/overwrite.less
+++ b/public/css/overwrite.less
@@ -54,6 +54,7 @@ header {
         #header-right-top {
             display: -webkit-box; /* fallback for apple webkit */
             display: flex;
+            align-items: center;
         }
     }
 }
@@ -195,6 +196,7 @@ main {
 }
 #browser-selection {
     flex: 0;
+    text-align: center;
 }
 #testing { // unit testing ouput
     width: 400px;
